--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql
+  username: lifeline
+  password: lifeline
+  server: 127.0.0.1
+  database: lifeline_production
   timeout: 5000
